# spark-prometheus-monitoring

./: .gitignore  README.md  docker-compose.yaml  eda.ipynb  pyproject.toml
observability/prometheus/: prometheus.yaml
src/: dataset.py  main.py  process.py
